Gerando War Parei Aula 295

--- a/src/main/webapp/templates/modelo.xhtml
+++ b/src/main/webapp/templates/modelo.xhtml
@@ -52,7 +52,9 @@
 
 					<p:submenu label="Movimentações" icon="ui-icon-gear">
 						<p:menuitem value="Venda" url="/pages/vendas.xhtml" />
+						<p:menuitem value="Caixa" url="/pages/caixa.xhtml" />
 					</p:submenu>
+					
 					
 				
 
